--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^10.20.0",
     "@stripe/stripe-js": "^8.1.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -16,6 +17,7 @@
     "@supabase/supabase-js": "^2.75.0",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
